--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,7 +1,37 @@
 .master{
-    width: 55%;
+    width: 58%;
 }
 
 .slave{
-    width: 35%;
+    width: 38%;
+}
+
+.page-header {
+    border-bottom: 1px solid #EEEEEE;
+    margin: 20px 0 10px;
+    padding-bottom: 3px;
+}
+
+.text {
+    color: #8E93A7;
+    font-size: 11px;
+    margin-top: 20px;
+    word-wrap: normal;
+    width:100%
+}
+
+.gauge {
+    float: left;
+    height: 200px;
+    width: 200px;
+}
+
+.rate{
+    color: #7CD2C7;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 14px;
+    font-family: 'SegoeUI-Semibold','Segoe UI Semibold','HelveticaNeue-Medium','Helvetica Neue Medium','SegoeUI','Segoe UI','HelveticaNeue','Helvetica Neue',Verdana;
+    font-weight: bold;
+
 }
