--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -12,6 +12,13 @@
     padding-bottom: 3px;
 }
 
+#conf{
+    margin-top: -40px;
+}
+
+.center{
+    text-align:center;
+}
 .text {
     color: #8E93A7;
     font-size: 11px;
@@ -23,7 +30,7 @@
 .gauge {
     float: left;
     height: 200px;
-    width: 200px;
+    width: 350px;
 }
 
 .rate{
@@ -35,3 +42,78 @@
     font-weight: bold;
 
 }
+
+#status{
+    width:100%;
+    height: 30px;
+    line-height: 30px;
+    border: 1px solid darkgray;
+    border-radius: 5px;
+    background-color: lightgray;
+    font-size: 16px;
+    text-align:center;
+    margin: 5px 0;
+    position:relative;
+}
+
+#statusText{
+    position:absolute;
+    top:0px;
+    width:100%
+}
+
+#progressBar{
+    border-radius: 5px;
+    height:100%;
+    background-color: orange;
+
+}
+
+
+/*configuraiton box */
+#modal {
+      background:#fff;
+      left:50%;
+      margin:-250px 0 0 -40%;
+      position:absolute;
+      top:-50%;
+      width:80%;
+      border-radius:5px;
+      box-shadow:0 0 100px rgba(0, 0, 0, 0.5);
+      box-sizing:border-box;
+      -moz-box-sizing:border-box;
+      -webkit-box-sizing:border-box;
+  }
+/* Make the modal appear when targeted */
+#modal:target {
+    top:350px;
+    transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+}
+#modal header,#modal footer {
+    background:#f7f7f7;
+    border-bottom: 1px solid #e7e7e7;
+    border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    -webkit-border-radius: 5px 5px 0 0;
+}
+#modal footer {
+    border:none;
+    border-top: 1px solid #e7e7e7;
+    border-radius: 0 0 5px 5px;
+    -moz-border-radius: 0 0 5px 5px;
+    -webkit-border-radius: 0 0 5px 5px;
+}
+#modal section,#modal header, #modal footer {
+    padding:15px;
+    z-index:200;
+}
+#modal h2 {
+    margin:0;
+}
+#modal .btn {
+    float:right;
+}
+
+
