1. add two new charts, 2.add many new bugs and fixem all! - seems to be very stable now

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,9 +1,14 @@
 .master{
     width: 58%;
+ /*   background-color: mag;*/
 }
 
 .slave{
     width: 38%;
+}
+
+#results {
+    width: 100%;
 }
 
 .page-header {
@@ -75,6 +80,10 @@
 /* modal settings */
 .myModal {
     width: 700px
+}
+
+.resultsModal {
+ /*   width: 800px;*/
 
 }
 .help-block{
