--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -55,15 +55,12 @@
 }
 
 #status{
-    width:100%;
-    height: 10px;
-    line-height: 10px;
-    border: 1px solid darkgray;
-    border-radius: 5px;
-    background-color: lightgray;
-    font-size: 16px;
+
+
+    margin: 0px;
+    font-size: 12px;
     text-align:center;
-    margin: 5px 0;
+    margin-bottom: 30px;
     position:relative;
 }
 
@@ -105,3 +102,6 @@
     margin-top: 0px;
 }
 
+#results {
+    margin-top: 20px;
+}
